[package]
name = "txgen"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.44", features = ["full"]}
anyhow = "1"
solana-client = "2.2.3"
solana-rpc-client-api = "2.2.3"
solana-sdk = "2.2.1"
spl-token-2022 = "7.0.0"
spl-associated-token-account = "6.0.0"
serde_json = "1.0.140"
futures = "0.3.31"
rand = "0.9.0"
tracing = "0.1"
tracing-subscriber = "0.3"
